--- a/JobSearching-Backend/.env
+++ b/JobSearching-Backend/.env
@@ -14,3 +14,6 @@ DB_JOBS_COLLECTION = jobs
 
 SIGINT_MESSAGE = "Mongoose disconnected by app disconnect"
 SIGUSR2_MESSAGE = "Mongoose disconnected by app restart"
+
+GEO_SEARCH_MAX_DISTANCE = 1000000
+GEO_SEARCH_MIN_DISTANCE = 0
